--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <div class="container">
-        <input type="text" id="urlInput" placeholder="Enter URL">
-        <button id="scrapeButton">Scrape</button>
+        <h1>Web Scraper</h1>
+        <div class="input-group">
+            <input type="text" id="urlInput" placeholder="Enter URL">
+            <button id="scrapeButton">Scrape</button>
+        </div>
         <div id="result"></div>
     </div>
     <script src="script.js"></script>
