--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scraping Example</title>
+    <title>Desenvolvimento WEB SCRAPER</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
