exibição de mensagens em portugues

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Web Scraper</h1>
         <div class="input-group">
-            <input type="text" id="urlInput" placeholder="Enter URL">
+            <input type="text" id="urlInput" placeholder="Insira a URL desejada">
             <button id="scrapeButton">Scrape</button>
         </div>
         <div id="result"></div>
